[gd_scene load_steps=12 format=3 uid="uid://fg6lfyohw337"]

[ext_resource type="Script" path="res://MapOverviewMenu.gd" id="1_g7a4o"]
[ext_resource type="Script" path="res://Menu/ScaledContainerFullscreen.gd" id="2_hcwne"]
[ext_resource type="Theme" uid="uid://dbn0nm5yk2udn" path="res://Menu/FancyButtonContainer.tres" id="2_mw8do"]
[ext_resource type="Script" path="res://Menu/MenuButton.gd" id="3_2uk0n"]
[ext_resource type="FontFile" uid="uid://r7guvh1d66vn" path="res://Theme/HyperSuperItalic.ttf" id="3_7i8db"]
[ext_resource type="PackedScene" uid="uid://bad1ot4qs8cwe" path="res://Menu/LeaderboardMenu.tscn" id="4_r0ddw"]
[ext_resource type="PackedScene" uid="uid://c5387t1cl0ifm" path="res://Menu/RatingMenu.tscn" id="4_usqq2"]
[ext_resource type="PackedScene" uid="uid://boal45wpuj8gv" path="res://Menu/CommentContainer.tscn" id="8_hryn1"]

[sub_resource type="Theme" id="Theme_6pc6w"]
default_font = ExtResource("3_7i8db")
default_font_size = 128
Label/colors/font_shadow_color = Color(0.152941, 0.152941, 0.152941, 1)
Label/constants/shadow_offset_x = 12
Label/constants/shadow_offset_y = 12
Label/constants/shadow_outline_size = 1

[sub_resource type="Theme" id="Theme_4rmyr"]
default_font = ExtResource("3_7i8db")
default_font_size = 30
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
Label/constants/outline_size = 6
Label/constants/shadow_offset_x = 4
Label/constants/shadow_offset_y = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qy7g5"]

[node name="MapOverviewMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g7a4o")
trackId = "64fb19f35e616ef56517dfd0"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20
script = ExtResource("2_hcwne")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_mw8do")
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_6pc6w")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 2

[node name="TrackName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/Control"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 594.0
offset_bottom = 102.0
scale = Vector2(0.5, 0.5)
text = "Trackname"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 8

[node name="Author" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/Control2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 145.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
text = "by: Author"

[node name="spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="RatingMenu" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer" instance=ExtResource("4_usqq2")]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_4rmyr")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Downloads"
horizontal_alignment = 1

[node name="DownloadNumber" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "152"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Rating"
horizontal_alignment = 1

[node name="RatingNumber" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3.45/5"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Uploaded"
horizontal_alignment = 1

[node name="UploadDate" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "2021-01-23"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2

[node name="Container4" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qy7g5")

[node name="OpenCommentsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/Container4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../RightPanel/VBoxContainer/Container4/Button4")
focus_neighbor_bottom = NodePath("../../../RightPanel/VBoxContainer/Container/Button1")
script = ExtResource("3_2uk0n")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/Container4/OpenCommentsButton"]
layout_mode = 1
offset_right = 183.0
offset_bottom = 113.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.25098, 0.886275, 1, 1)
theme_override_font_sizes/font_size = 79
text = "Comments"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="LeaderboardMenu" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_r0ddw")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_mw8do")
alignment = 2

[node name="Container4" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qy7g5")

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../RightPanel/VBoxContainer/Container4/Button4")
focus_neighbor_bottom = NodePath("../../../RightPanel/VBoxContainer/Container/Button1")
script = ExtResource("3_2uk0n")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Container4/BackButton"]
layout_mode = 1
offset_right = 183.0
offset_bottom = 113.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(1, 0.25098, 0.25098, 1)
theme_override_font_sizes/font_size = 100
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Container5" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qy7g5")

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Container5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../RightPanel/VBoxContainer/Container4/Button4")
focus_neighbor_bottom = NodePath("../../../RightPanel/VBoxContainer/Container/Button1")
script = ExtResource("3_2uk0n")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Container5/SelectButton"]
layout_mode = 1
offset_right = 166.0
offset_bottom = 113.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.360784, 1, 0.25098, 1)
theme_override_font_sizes/font_size = 100
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="CommentsContainer" parent="CanvasLayer/MarginContainer" instance=ExtResource("8_hryn1")]
unique_name_in_owner = true
visible = false
layout_mode = 2
